fix paddings on mobile

--- a/src/components/Advices/Advices.scss
+++ b/src/components/Advices/Advices.scss
@@ -12,7 +12,7 @@
     display: flex;
     align-items: stretch;
     overflow-x: scroll;
-    padding: 20px 0;
+    padding: 20px;
   }
 
   &__posts-wrapper {
