--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -13,6 +13,6 @@
     align-items: center;
     overflow-x: scroll;
     white-space: nowrap;
-    padding: 0 0 10px 0;
+    padding: 0 0 10px 20px;
   }
 }
