--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px 20px;
-  margin: 0 10px;
+  margin-right: 10px;
   background-color: var(--secondary-color);
   border: 1px solid var(--light-color-1);
   border-radius: var(--btn-border-radius);
