--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,9 +1,7 @@
 .hero {
   height: 100vh;
   width: 100vw;
-  padding-top: 80px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 80px 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
