--- a/src/components/JobSearch/JobSearch.scss
+++ b/src/components/JobSearch/JobSearch.scss
@@ -1,5 +1,5 @@
 .job-search {
-  width: 90%;
+  width: 100%;
   margin-top: 80px;
   display: flex;
   flex-direction: column;
