--- a/src/components/RecommendedJobs/RecommendedJobs.scss
+++ b/src/components/RecommendedJobs/RecommendedJobs.scss
@@ -4,7 +4,7 @@
   border-bottom-left-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-  padding: 35px 15px;
+  padding: 35px 20px;
   height: 200px;
   overflow-x: scroll;
   white-space: nowrap;
@@ -15,10 +15,6 @@
   }
 
   &__wrapper {
-    position: absolute;
-    left: 0;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
   }
 }
